--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,22 +25,30 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
       - name: Install WebConsole If It Enabled
         run: |
           if [[ "${{ env.WEB_CONSOLE_INSTALL }}" == "enable" ]]; then
+            cd $GITHUB_ACTION_PATH
             mkdir plugins
             cd plugins
-            wget -o https://code.midline.ir/github-mcserver/addons/web-console/WebConsole.jar
+            curl -O WebConsole.jar https://code.midline.ir/github-mcserver/addons/web-console/WebConsole.jar
             mkdir WebConsole
-            wget -o https://code.midline.ir/github-mcserver/addons/web-console/config.yml
+            cd WebConsole
+            curl -O config.yml https://code.midline.ir/github-mcserver/addons/web-console/config.yml
             awk '{gsub("OpUserX", "$WEB_CONSOLE_USERNAME"); print}' config.yml
             awk '{gsub("OpPassX", "$WEB_CONSOLE_PASSWORD"); print}' config.yml
             cd ../..
           else
             echo "Skipping Install WebConsole"
           fi
-
-        
+          
+      - name: Login To Your Github And Upload Files
+        run: |
+          git config --global user.email github-actions@github.com
+          git config --global user.name github-actions
+          git add .
+          git commit -m "Upload New Files"
+          git push
