--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,10 +34,10 @@ jobs:
             cd $GITHUB_ACTION_PATH
             mkdir plugins
             cd plugins
-            curl -O WebConsole.jar https://code.midline.ir/github-mcserver/addons/web-console/WebConsole.jar
+            wget -O WebConsole.jar https://code.midline.ir/github-mcserver/addons/web-console/WebConsole.jar
             mkdir WebConsole
             cd WebConsole
-            curl -O config.yml https://code.midline.ir/github-mcserver/addons/web-console/config.yml
+            wget -O config.yml https://code.midline.ir/github-mcserver/addons/web-console/config.yml
             awk '{gsub("OpUserX", "$WEB_CONSOLE_USERNAME"); print}' config.yml
             awk '{gsub("OpPassX", "$WEB_CONSOLE_PASSWORD"); print}' config.yml
             cd ../..
