--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ name: testx
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+permissions:
+    contents: write
 
 env: 
   ###### Web Console Settings
