--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,8 @@ jobs:
             mkdir WebConsole
             cd WebConsole
             wget -O config.yml https://code.midline.ir/github-mcserver/addons/web-console/config.yml
-            awk '{gsub("OpUserX", "$WEB_CONSOLE_USERNAME"); print}' config.yml
-            awk '{gsub("OpPassX", "$WEB_CONSOLE_PASSWORD"); print}' config.yml
+            sed -i 's/OpUserX/$WEB_CONSOLE_USERNAME/g' config.yml
+            sed -i 's/OpPassX/$WEB_CONSOLE_PASSWORD/g' config.yml
             cd ../..
           else
             echo "Skipping Install WebConsole"
